--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="testes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Héricles/Downloads/easyaccept.jar"/>
+	<classpathentry kind="lib" path="easyaccept/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
